fix viewport and dark mode borders

--- a/src/app.pcss
+++ b/src/app.pcss
@@ -52,4 +52,11 @@
     --input: 240 3.7% 15.9%;
     --ring: 240 4.9% 83.9%;
   }
+
+  
+  *,
+  ::before,
+  ::after {
+    @apply dark:border-neutral-900;
+  }
 }
